log/build_2024-10-04_20-54-42/ur5_control/stdout_stderr.log
running egg_info
writing ../../build/ur5_control/ur5_control.egg-info/PKG-INFO
writing dependency_links to ../../build/ur5_control/ur5_control.egg-info/dependency_links.txt
writing entry points to ../../build/ur5_control/ur5_control.egg-info/entry_points.txt
writing requirements to ../../build/ur5_control/ur5_control.egg-info/requires.txt
writing top-level names to ../../build/ur5_control/ur5_control.egg-info/top_level.txt
reading manifest file '../../build/ur5_control/ur5_control.egg-info/SOURCES.txt'
writing manifest file '../../build/ur5_control/ur5_control.egg-info/SOURCES.txt'
running build
running build_py
copying ur5_control/task1b_boiler_plate.py -> /home/ojasvi/Desktop/eYRC2024LogisticCobot/build/ur5_control/build/lib/ur5_control
running install
running install_lib
copying /home/ojasvi/Desktop/eYRC2024LogisticCobot/build/ur5_control/build/lib/ur5_control/task1b_boiler_plate.py -> /home/ojasvi/Desktop/eYRC2024LogisticCobot/install/ur5_control/lib/python3.10/site-packages/ur5_control
byte-compiling /home/ojasvi/Desktop/eYRC2024LogisticCobot/install/ur5_control/lib/python3.10/site-packages/ur5_control/task1b_boiler_plate.py to task1b_boiler_plate.cpython-310.pyc
  File "/home/ojasvi/Desktop/eYRC2024LogisticCobot/install/ur5_control/lib/python3.10/site-packages/ur5_control/task1b_boiler_plate.py", line 470
    elif angle<0.5 && angle>-0.5:
                    ^
SyntaxError: invalid syntax

running install_data
running install_egg_info
removing '/home/ojasvi/Desktop/eYRC2024LogisticCobot/install/ur5_control/lib/python3.10/site-packages/ur5_control-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/ur5_control/ur5_control.egg-info to /home/ojasvi/Desktop/eYRC2024LogisticCobot/install/ur5_control/lib/python3.10/site-packages/ur5_control-0.0.0-py3.10.egg-info
running install_scripts
Installing task1b script to /home/ojasvi/Desktop/eYRC2024LogisticCobot/install/ur5_control/lib/ur5_control
writing list of installed files to '/home/ojasvi/Desktop/eYRC2024LogisticCobot/build/ur5_control/install.log'
